tests/passing/function_return.tails
func foo() -> int:
  123

func tests() -> unit:
  discard foo()
