tests/failing/declare_parameter_redefine_function.tails
func a(a: int) -> unit:
  pass

func tests() -> unit:
  a(123)
